[gd_scene load_steps=15 format=3 uid="uid://crvaxgw3mwm78"]

[ext_resource type="Script" uid="uid://boyushxgrf6b3" path="res://main.gd" id="1_k5eii"]
[ext_resource type="PackedScene" uid="uid://4bt3ndfyg5jf" path="res://ui/pause/pause_menu.tscn" id="3_lo3uq"]
[ext_resource type="Script" uid="uid://b6xajvhhktb2c" path="res://ui/ingame_menus/ingame_menus.gd" id="3_qo32b"]
[ext_resource type="PackedScene" uid="uid://d4bt3ndfyg5je" path="res://ui/title/title_menu.tscn" id="3_sxw8d"]
[ext_resource type="PackedScene" uid="uid://ce83xqbtw77i5" path="res://ui/inventory/inventory_menu.tscn" id="4_2h3fo"]
[ext_resource type="PackedScene" uid="uid://b3ff7xd1sb0og" path="res://ui/buildings/craft/crafting_menu.tscn" id="5_bbh1v"]
[ext_resource type="PackedScene" uid="uid://bpmgglwruexb7" path="res://common/camera/my_camera.tscn" id="5_du1ce"]
[ext_resource type="Script" uid="uid://cipodwj4n3x58" path="res://world/world.gd" id="5_qpwfe"]
[ext_resource type="PackedScene" uid="uid://bhc1lv183q4nr" path="res://ui/buildings/building_menu.tscn" id="6_0fwhm"]
[ext_resource type="Script" uid="uid://dt2i7i1ek35tn" path="res://ui/outgame_menus/outgame_menus.gd" id="7_ixuk5"]
[ext_resource type="PackedScene" uid="uid://dn05qj4gsbmoa" path="res://ui/hud/hud.tscn" id="7_q3nhx"]
[ext_resource type="PackedScene" uid="uid://ccoad4rkapxlr" path="res://effects/screen_transition/screen_transition.tscn" id="8_aqk3u"]
[ext_resource type="PackedScene" uid="uid://buknj5j72vcmc" path="res://ui/options/options_menu.tscn" id="8_lysbd"]
[ext_resource type="PackedScene" uid="uid://bo7o6835f3fh6" path="res://ui/debug/debug_overlay.tscn" id="9_yypcb"]

[node name="Main" type="Node"]
process_mode = 3
script = ExtResource("1_k5eii")

[node name="Gui" type="CanvasLayer" parent="."]

[node name="Hud" parent="Gui" instance=ExtResource("7_q3nhx")]

[node name="IngameMenus" type="Control" parent="Gui"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
script = ExtResource("3_qo32b")

[node name="InventoryMenu" parent="Gui/IngameMenus" instance=ExtResource("4_2h3fo")]
visible = false
layout_mode = 1

[node name="CraftingMenu" parent="Gui/IngameMenus" instance=ExtResource("5_bbh1v")]
visible = false
layout_mode = 1

[node name="BuildingMenu" parent="Gui/IngameMenus" instance=ExtResource("6_0fwhm")]
visible = false
layout_mode = 1

[node name="OutgameMenus" type="Control" parent="Gui"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
script = ExtResource("7_ixuk5")

[node name="PauseMenu" parent="Gui/OutgameMenus" instance=ExtResource("3_lo3uq")]
process_mode = 2
visible = false
layout_mode = 1

[node name="TitleMenu" parent="Gui/OutgameMenus" instance=ExtResource("3_sxw8d")]
layout_mode = 1

[node name="OptionsMenu" parent="Gui/OutgameMenus" groups=["blocking"] instance=ExtResource("8_lysbd")]
visible = false
layout_mode = 1

[node name="Effects" type="Control" parent="Gui"]
top_level = true
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2

[node name="ScreenTransition" parent="Gui/Effects" instance=ExtResource("8_aqk3u")]
top_level = true
layout_mode = 1

[node name="DebugOverlay" parent="Gui" instance=ExtResource("9_yypcb")]
visible = false

[node name="World" type="Node2D" parent="."]
process_mode = 1
script = ExtResource("5_qpwfe")

[node name="Cam" parent="World" instance=ExtResource("5_du1ce")]
zoom = Vector2(1.5, 1.5)
limit_right = 640
limit_bottom = 576

[node name="Bgm" type="AudioStreamPlayer" parent="."]
volume_db = -10.0
autoplay = true
bus = &"Music"
